--- a/src/kaizen/PopUpLearnings.fxml
+++ b/src/kaizen/PopUpLearnings.fxml
@@ -1,11 +1,54 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
+<?import javafx.scene.text.*?>
+<?import javafx.scene.image.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kaizen.PopUpLearningsController">
-    
+
+<AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="kaizen.PopUpLearningsController">
+   <children>
+      <ImageView fitHeight="600.0" fitWidth="400.0" layoutX="7.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+      <GridPane layoutX="150.0" layoutY="5.0" prefHeight="783.0" prefWidth="460.0" AnchorPane.bottomAnchor="12.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="5.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="121.0" minHeight="2.0" prefHeight="96.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="691.0" minHeight="10.0" prefHeight="610.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="224.0" minHeight="0.0" prefHeight="70.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Label prefHeight="53.0" prefWidth="395.0" styleClass="large-label" stylesheets="@stylesheet.css" text="Past 30 day learnings">
+               <GridPane.margin>
+                  <Insets left="10.0" />
+               </GridPane.margin>
+            </Label>
+            <TableView prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+              <columns>
+                <TableColumn fx:id="well30" prefWidth="318.0" text="Things you did well" />
+                <TableColumn fx:id="well30Count" minWidth="0.0" prefWidth="100.0" text="Encounters" />
+              </columns>
+               <GridPane.margin>
+                  <Insets left="5.0" right="10.0" />
+               </GridPane.margin>
+            </TableView>
+            <TableView prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+              <columns>
+                <TableColumn fx:id="better30" prefWidth="311.0" text="Things you could have done better" />
+                <TableColumn fx:id="betterCount" prefWidth="103.0" text="Encounters" />
+              </columns>
+               <GridPane.margin>
+                  <Insets left="5.0" right="10.0" />
+               </GridPane.margin>
+            </TableView>
+            <Button fx:id="backToLearnings" mnemonicParsing="false" onAction="#handleBack" prefHeight="33.0" prefWidth="73.0" styleClass="buttons" stylesheets="@stylesheet.css" text="Back" GridPane.rowIndex="2" />
+         </children>
+      </GridPane>
+   </children>
 </AnchorPane>
