fixed database connection syntax updated popuplearnings table...

--- a/src/kaizen/DailyLearnings.fxml
+++ b/src/kaizen/DailyLearnings.fxml
@@ -153,8 +153,8 @@
                   </Text>
                   <TableView fx:id="didWellView" prefHeight="294.0" prefWidth="554.0" GridPane.rowIndex="2">
                     <columns>
-                      <TableColumn fx:id="didLearn" prefWidth="404.0" text="Things you learnt" />
-                      <TableColumn minWidth="0.0" prefWidth="149.0" text="How many times" />
+                      <TableColumn fx:id="didWellColumn" prefWidth="404.0" text="Things you learnt" />
+                      <TableColumn fx:id="didWellCount" minWidth="0.0" prefWidth="149.0" text="How many times" />
                     </columns>
                      <GridPane.margin>
                         <Insets bottom="40.0" right="20.0" />
@@ -172,8 +172,8 @@
                   </Text>
                   <TableView fx:id="doBetterView" prefHeight="100.0" prefWidth="554.0" GridPane.rowIndex="4">
                     <columns>
-                      <TableColumn prefWidth="403.0" text="Things you could have done better" />
-                      <TableColumn minWidth="0.0" prefWidth="149.0" text="How many times" />
+                      <TableColumn fx:id="doBetterColumn" prefWidth="403.0" text="Things you could have done better" />
+                      <TableColumn fx:id="doBetterCount" minWidth="0.0" prefWidth="149.0" text="How many times" />
                     </columns>
                      <GridPane.margin>
                         <Insets right="20.0" />
