--- a/src/kaizen/PieChart.fxml
+++ b/src/kaizen/PieChart.fxml
@@ -21,7 +21,7 @@
                   <ToggleButton fx:id="deepFocus" mnemonicParsing="false" onAction="#handleDeepFocus" prefHeight="50.0" prefWidth="200.0" styleClass="menu-toggle" stylesheets="@stylesheet.css" text="DEEP FOCUS" />
                   <ToggleButton fx:id="taskTracker" mnemonicParsing="false" onAction="#handleTaskTracker" prefHeight="50.0" prefWidth="200.0" styleClass="menu-toggle" stylesheets="@stylesheet.css" text="TASK TRACKER" />
                   <ToggleButton fx:id="timeDashboard" mnemonicParsing="false" onAction="#handleTimeDashboard" prefHeight="50.0" prefWidth="200.0" styleClass="current-menu-toggle" stylesheets="@stylesheet.css" text="TIME DASHBOARD" />
-                  <ToggleButton mnemonicParsing="false" prefHeight="50.0" prefWidth="200.0" styleClass="menu-toggle" stylesheets="@stylesheet.css" text="DAILY LEARNINGS" />
+                  <ToggleButton fx:id="dailyLearnings" mnemonicParsing="false" onAction="#handleDailyLearnings" prefHeight="50.0" prefWidth="200.0" styleClass="menu-toggle" stylesheets="@stylesheet.css" text="DAILY LEARNINGS" />
                </children>
                <opaqueInsets>
                   <Insets />
@@ -57,17 +57,48 @@
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <PieChart fx:id="lifePieChart" title="Pie Chart Of My Life" />
+                  <PieChart fx:id="lifePieChart" styleClass="small-label">
+                     <GridPane.margin>
+                        <Insets bottom="100.0" left="50.0" right="50.0" top="100.0" />
+                     </GridPane.margin></PieChart>
                   <Button fx:id="logInTime" mnemonicParsing="false" onAction="#handleLogInTime" text="Log in time">
                      <GridPane.margin>
-                        <Insets left="40.0" top="250.0" />
+                        <Insets left="70.0" top="575.0" />
                      </GridPane.margin>
                      <font>
                         <Font size="24.0" />
                      </font>
+                  </Button>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="large-label" text="Pie Chart Of My Life">
+                     <GridPane.margin>
+                        <Insets bottom="575.0" left="350.0" />
+                     </GridPane.margin>
+                  </Text>
+                  <Button fx:id="dailyBreakdown" mnemonicParsing="false" onAction="#handleDailyBreakdown" text="Daily Breakdown">
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                     <GridPane.margin>
+                        <Insets left="250.0" top="575.0" />
+                     </GridPane.margin>
+                  </Button>
+                  <Button fx:id="weeklyBreakdown" mnemonicParsing="false" onAction="#handleWeeklyBreakdown" text="Weekly Breakdown">
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                     <GridPane.margin>
+                        <Insets left="500.0" top="575.0" />
+                     </GridPane.margin>
+                  </Button>
+                  <Button fx:id="weeklyBreakdown1" mnemonicParsing="false" onAction="#handleWeeklyTrends" text="Weekly Trends">
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                     <GridPane.margin>
+                        <Insets left="775.0" top="575.0" />
+                     </GridPane.margin>
                   </Button>
                </children>
             </GridPane>
