--- a/src/kaizen/PopUpLearnings.fxml
+++ b/src/kaizen/PopUpLearnings.fxml
@@ -9,8 +9,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="kaizen.PopUpLearningsController">
+<AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kaizen.PopUpLearningsController">
    <children>
       <ImageView fitHeight="600.0" fitWidth="400.0" layoutX="7.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
       <GridPane layoutX="150.0" layoutY="5.0" prefHeight="783.0" prefWidth="460.0" AnchorPane.bottomAnchor="12.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="5.0">
@@ -29,18 +28,18 @@
                   <Insets left="10.0" />
                </GridPane.margin>
             </Label>
-            <TableView prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+            <TableView fx:id="well30Report" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
               <columns>
-                <TableColumn fx:id="well30" prefWidth="318.0" text="Things you did well" />
+                <TableColumn fx:id="wellColumn" prefWidth="318.0" text="Things you did well" />
                 <TableColumn fx:id="well30Count" minWidth="0.0" prefWidth="100.0" text="Encounters" />
               </columns>
                <GridPane.margin>
                   <Insets left="5.0" right="10.0" />
                </GridPane.margin>
             </TableView>
-            <TableView prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <TableView fx:id="better30Report" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
               <columns>
-                <TableColumn fx:id="better30" prefWidth="311.0" text="Things you could have done better" />
+                <TableColumn fx:id="betterColumn" prefWidth="311.0" text="Things you could have done better" />
                 <TableColumn fx:id="betterCount" prefWidth="103.0" text="Encounters" />
               </columns>
                <GridPane.margin>
