--- a/src/kaizen/PopUpLearnings.fxml
+++ b/src/kaizen/PopUpLearnings.fxml
@@ -40,7 +40,7 @@
             <TableView fx:id="better30Report" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
               <columns>
                 <TableColumn fx:id="betterColumn" prefWidth="311.0" text="Things you could have done better" />
-                <TableColumn fx:id="betterCount" prefWidth="103.0" text="Encounters" />
+                <TableColumn fx:id="better30Count" prefWidth="103.0" text="Encounters" />
               </columns>
                <GridPane.margin>
                   <Insets left="5.0" right="10.0" />
