--- a/src/kaizen/RegisterScreen.fxml
+++ b/src/kaizen/RegisterScreen.fxml
@@ -25,17 +25,17 @@
             <Font name="Calibri Light" size="30.0" />
          </font>
       </Label>
-      <TextField layoutX="204.0" layoutY="391.0" prefHeight="50.0" prefWidth="550.0" promptText="Choose your username" styleClass="input-fields" stylesheets="@stylesheet.css" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="300.0">
+      <TextField fx:id="email" layoutX="204.0" layoutY="391.0" prefHeight="50.0" prefWidth="550.0" promptText="Choose your username" styleClass="input-fields" stylesheets="@stylesheet.css" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="300.0">
          <font>
             <Font name="Calibri Light" size="30.0" />
          </font>
       </TextField>
-      <PasswordField prefHeight="50.0" prefWidth="550.0" promptText="Choose your password" styleClass="input-fields" stylesheets="@stylesheet.css" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="450.0">
+      <PasswordField fx:id="pw" prefHeight="50.0" prefWidth="550.0" promptText="Choose your password" styleClass="input-fields" stylesheets="@stylesheet.css" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="450.0">
          <font>
             <Font name="Calibri Light" size="30.0" />
          </font>
       </PasswordField>
-      <PasswordField prefHeight="50.0" prefWidth="550.0" promptText="Confirm password" styleClass="input-fields" stylesheets="@stylesheet.css" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="525.0">
+      <PasswordField fx:id="confirmedPw" prefHeight="50.0" prefWidth="550.0" promptText="Confirm password" styleClass="input-fields" stylesheets="@stylesheet.css" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="525.0">
          <font>
             <Font name="Calibri Light" size="30.0" />
          </font>
@@ -50,16 +50,16 @@
             <Font name="Calibri Light" size="30.0" />
          </font>
       </Button>
-      <TextField layoutX="75.0" layoutY="298.0" prefHeight="50.0" prefWidth="250.0" promptText="First name" styleClass="input-fields" stylesheets="@stylesheet.css" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="375.0">
+      <TextField fx:id="fname" layoutX="75.0" layoutY="298.0" prefHeight="50.0" prefWidth="250.0" promptText="First name" styleClass="input-fields" stylesheets="@stylesheet.css" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="375.0">
          <font>
             <Font name="Calibri Light" size="30.0" />
          </font>
       </TextField>
-      <TextField layoutX="387.0" layoutY="298.0" prefHeight="50.0" prefWidth="250.0" promptText="Last name" styleClass="input-fields" stylesheets="@stylesheet.css" AnchorPane.leftAnchor="400.0" AnchorPane.topAnchor="375.0">
+      <TextField fx:id="lname" layoutX="387.0" layoutY="298.0" prefHeight="50.0" prefWidth="250.0" promptText="Last name" styleClass="input-fields" stylesheets="@stylesheet.css" AnchorPane.leftAnchor="400.0" AnchorPane.topAnchor="375.0">
          <font>
             <Font name="Calibri Light" size="30.0" />
          </font>
       </TextField>
-      <Label prefHeight="40.0" prefWidth="550.0" styleClass="output-label" stylesheets="@stylesheet.css" text="Label" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="675.0" />
+      <Label fx:id="label" onMouseClicked="#handleCancel" prefHeight="40.0" prefWidth="550.0" styleClass="output-label" stylesheets="@stylesheet.css" text="Successfully signed up! Click here to login" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="675.0" />
    </children>
 </AnchorPane>
